# argus

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
alethia/: __init__.py  __main__.py  cli.py  config.py  executor.py  executor_base.py  executor_factory.py  executor_judge0.py  models.py  orchestrator.py  prompts.py
alethia/agents/: __init__.py  base.py  generator.py  reviser.py  verifier.py
alethia/web/: app.py  auth.py  db.py
alethia/web/templates/: base.html  create.html  dashboard.html  history.html  import.html  index.html  leaderboard.html  login.html  problem.html  set_detail.html  sets.html  settings.html  signup.html
problems/: implement-trie-prefix-tree.json  target-sum-combinations.json  two_sum.json
tests/: test_backtracking.py  test_diverse_generation.py  test_executor.py  test_judge0_executor.py  test_models.py
